packages/website/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #2e8555;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --ifm-table-background: transparent;
  --ifm-table-stripe-background: transparent;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #25c2a0;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
  --ifm-table-background: transparent;
  --ifm-table-stripe-background: transparent;
}

:root {
  --ifm-color-primary: #fe7520;
  --ifm-color-primary-dark: #fe6304;
  --ifm-color-primary-darker: #f25d01;
  --ifm-color-primary-darkest: #c74d01;
  --ifm-color-primary-light: #fe873c;
  --ifm-color-primary-lighter: #fe8f4b;
  --ifm-color-primary-lightest: #feaa75;
}

[data-theme='dark'] {
  --ifm-color-primary: #fe7520;
  --ifm-color-primary-dark: #fe6304;
  --ifm-color-primary-darker: #f25d01;
  --ifm-color-primary-darkest: #c74d01;
  --ifm-color-primary-light: #fe873c;
  --ifm-color-primary-lighter: #fe8f4b;
  --ifm-color-primary-lightest: #feaa75;
}

[data-theme='dark'] playground-file-editor {
  --playground-code-background: rgb(40, 40, 40);
  --playground-code-default-color: rgb(189, 174, 147);
  --playground-code-cursor-color: rgb(235, 219, 178);
  --playground-code-selection-background: rgb(146, 131, 116);
  --playground-code-gutter-background: rgb(40, 40, 40);
  --playground-code-gutter-border-right: 0px;
  --playground-code-linenumber-color: rgb(124, 111, 100);
  --playground-code-atom-color: rgb(211, 134, 155);
  --playground-code-attribute-color: rgb(142, 192, 124);
  --playground-code-builtin-color: rgb(254, 128, 25);
  --playground-code-comment-color: rgb(146, 131, 116);
  --playground-code-def-color: rgb(235, 219, 178);
  --playground-code-keyword-color: rgb(248, 73, 52);
  --playground-code-meta-color: rgb(131, 165, 152);
  --playground-code-number-color: rgb(211, 134, 155);
  --playground-code-operator-color: rgb(235, 219, 178);
  --playground-code-qualifier-color: rgb(142, 192, 124);
  --playground-code-string-color: rgb(184, 187, 38);
  --playground-code-string-2-color: rgb(142, 192, 124);
  --playground-code-tag-color: rgb(254, 128, 25);
  --playground-code-type-color: rgb(250, 189, 47);
  --playground-code-variable-color: rgb(235, 219, 178);
  --playground-code-variable-2-color: rgb(235, 219, 178);
  --playground-code-variable-3-color: rgb(250, 189, 47);
  --playground-code-callee-color: rgb(235, 219, 178);
  --playground-code-property-color: rgb(235, 219, 178)
}

[data-theme='dark'] playground-tab-bar,
[data-theme='dark'] playground-preview {
  --playground-tab-bar-background: rgb(40, 40, 40);
  --playground-tab-bar-foreground-color: rgb(254, 128, 25);
  --playground-highlight-color: rgb(254, 128, 25);
  --playground-preview-toolbar-background: rgb(40, 40, 40);
  --playground-preview-toolbar-foreground-color: rgb(255, 255, 255);
}

[data-theme='dark'] playground-preview {
  background-color: var(--ifm-background-color);
}

.navbar-dropdown-hidden {
  display: none;
}

.hero--primary {
  --ifm-hero-background-color: var(--ifm-background-color);
}


.header-github-link {
  position: relative;
  height: 1.5rem;
  width: 1.5rem;
}

.header-github-link svg {
  height: 1.5rem;
  width: 1.5rem;
  position: absolute;
  left: 0;
  top: 0;
}

.header-github-link svg path {
  fill: var(--ifm-font-color-base);
}

.header-github-link:hover svg path {
  fill: var(--ifm-navbar-link-hover-color);
}

code {
  text-wrap: nowrap;
}

